# code_review_buddy

./: .gitignore  PLANS.md  README.md  prd.md  pyproject.toml  spec.md
eval/: engine.py  runner.py
eval/data/: cases.json
src/: __init__.py  agent.py  cli.py  context.py  github_client.py  observability.py  output.py  prompts.py  schema.py  snapshot_capture.py  tools.py
tests/: conftest.py  test_cli_auth_check.py  test_github_client.py  test_github_client_integration.py  test_schema_roundtrip.py  test_snapshot_capture.py  test_snapshot_capture_integration.py
