[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-agent"
version = "0.1.0"
description = "Eval-first GitHub pull request code review agent."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.27.2,<0.29.0",
    "pydantic>=2.10.6,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "typer>=0.15.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.2,<2.0.0",
    "black>=24.10.0,<25.0.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.9.10,<0.11.0",
]

[project.scripts]
code-review-agent = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "eval"]

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "unit: fast deterministic tests",
    "integration: external dependency tests",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
